--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@uniprank/ngx-scrollspy": "^1.0.5",
     "angular-font-awesome": "^3.1.2",
+    "angular-scroll": "^1.0.2",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "rxjs": "~6.4.0",
