--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@nicky-lenaers/ngx-scroll-to": "^3.0.1",
     "@uniprank/ngx-scrollspy": "^1.0.5",
     "angular-font-awesome": "^3.1.2",
     "angular-scroll": "^1.0.2",
